# xcrypt-python

./: .pre-commit-config.yaml  README.md  pyproject.toml  xcrypt.py
.github/workflows/: ci.yml
docs/: architecture.md  index.md  usage.md
examples/: example1.py  example2.yaml
sample/: a.py  bulk_tim.py  bulk_tim.xcr  bulk_tim_out.xcr  test.py  test.xcr
sample/xcryptpy/: DC.py  abort.py  bulk_num.py  customize.py  dependency.py  fib-eval.py  fib_eval.py  in_job.py  invalidate.py  limit.py  mic-fib-eval.py  mic_fib_eval.py  n_section_method.py  range.py  remote.py  repeat.py  sandbox.py  save.py  signal.py  signal_handle.py  single.py  spawn.py  successor.py
scripts/: convert_xcrypt_to_py.py  run_linter.sh  setup_env.sh
tests/: __init__.py  test_cli.py  test_config.yaml  test_formatter.py  test_function_conversion.py  test_job.py  test_lib.py  test_scheduler.py  test_xcryptpy.py  util.py
tests/test_xcryptpy/: test_abort.py  test_bulk_num.py  test_customize.py  test_dc.py  test_dependency.py  test_fib_eval.py  test_in_job.py  test_invalidate.py  test_limit.py  test_mic_fib_eval.py  test_n_section_method.py  test_range.py  test_remote.py  test_repeat.py  test_sandbox.py  test_save.py  test_signal_handle.py  test_single.py  test_spawn.py  test_successor.py
xcrypt_python/: __init__.py  cli.py  config.py  formatter.py  job.py  lib.py  scheduler.py  transformer.py  utils.py
xcrypt_python/visitors/: __init__.py  base_visitor.py  expression_visitor.py  statement_visitor.py
