[tool.poetry]
name = "xcrypt-python"
version = "0.1.0"
description = "Xcrypt parallel job scheduling tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "xcrypt_python"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
pyyaml = "^6.0"
pytest = "^7.0"
rich = "^13.0"
mypy = "^1.0"
black = "^22.0"
flake8 = "^5.0"
isort = "^5.0"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.scripts]
xcrypt-python = "xcrypt_python.cli:main"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20241230"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
